# dialog

audio_common/sound_play/include/sound_play/: sound_play.hpp
dialogflow_ros2/: README.md  requirements.txt
dialogflow_ros2/.github/ISSUE_TEMPLATE/: issue-template.md
dialogflow_ros2/.github/workflows/: master.yaml
dialogflow_ros2/dialogflow_ros2/: package.xml  setup.cfg  setup.py
dialogflow_ros2/dialogflow_ros2/config/: context.yaml  params.yaml
dialogflow_ros2/dialogflow_ros2/dialogflow_ros2/: audio_server.py  detect_intent_service.py  dialogflow_client.py  google_client.py  hotword_dialogflow.py  mic_client.py
dialogflow_ros2/dialogflow_ros2/dialogflow_ros2/utils/: converters.py  output.py
dialogflow_ros2/dialogflow_ros2/launch/: dialogflow.launch.py
dialogflow_ros2/dialogflow_ros2_interfaces/: CMakeLists.txt  package.xml
gb_dialog/: README.md
gb_dialog/gb_dialog/src/: DialogInterface.cpp
