<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dialogflow_ros2</name>
  <version>0.0.1</version>
  <description>Dialogflow ros2</description>
  <maintainer email="jc.manzanares.serrano@gmail.com"> Juan Carlos Manzanares Serrano</maintainer>
  <license>Apache License, Version 2.0</license>

  <build_depend>dialogflow_ros2_interfaces</build_depend>
  <exec_depend>dialogflow_ros2_interfaces</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
